# sslvpn

./: .gitignore  CMakeLists.txt  SD-WAN-README.md
.github/workflows/: build.yml
CMake/Includes/: ProjectExternals_spdlog.cmake  ProjectPackage.cmake  git_revision_generate.cmake
node/macos/: MacEthernetTapAgent
node/windows/: sdwan-network.bat  sdwan-start.bat
nsis/: CMakeLists.txt
src/: CMakeLists.txt  avpn.qrc  cryptdata.cpp  logger.cpp  logger.h  main.cpp  vpninfo.cpp
src/dialog/: mainwindow.cpp  mainwindow.h  mainwindow.ui
